tests/models/enum/named/usize/fail/min_length.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/enum/named/usize/fail/min_length.rs:6:9
  |
6 |         value: usize
  |         ^^^^^
